--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,31 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header h1 {
+font-size: 0.9em;
+} 
+
+
+.App-header h3 {
+font-size: 0.9em;
+}
+.App-header h4 {
+  font-size: 0.9em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.App-header div {
+  font-size: 0.9em;
+}
+
+.App-header .small-text {
+  font-size:0.9em;
+}
+
+.App-header .very-small-text {
+  font-size: 0.9em;
+}
+
+.analysis-section {
+  font-size: 0.9em;
 }
